--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,13 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Hays Stanford
+email: haysstanford@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Get valuable insights into startups, coding, and humanity. Learn 
+  how to increase your chances of success from nothing.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://haysstanford.com" # the base hostname & protocol for your site
+twitter_username: thehaysstanford
+github_username:  hayss
 
 # Build settings
 markdown: kramdown
