Updated site url to correct string

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Get valuable insights into startups, coding, and humanity. Learn 
   how to increase your chances of success.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "https://haysstanford.com" # the base hostname & protocol for your site
+url: "https://www.haysstanford.com" # the base hostname & protocol for your site
 twitter_username: thehaysstanford
 github_username:  hayss
 
